# StreamForge

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/api/v1/: __init__.py  strm.py
app/api/v1/auth/: __init__.py  auth.py  password.py  register.py
app/api/v1/system_manage/: __init__.py  apis.py  menus.py  settings.py
app/controllers/: menu.py
app/controllers/strm/: __init__.py  server_controller.py  system_controller.py  task_controller.py  upload.py
app/core/: ctx.py  dependency.py  exceptions.py  init_app.py  middlewares.py  retry_service.py  task_recovery.py
app/log/: log.py
app/models/strm/: __init__.py  download.py  file.py  models.py  task.py  upload.py
app/models/system/: admin.py  utils.py
app/schemas/: base.py  form.py  users.py
app/schemas/strm/: __init__.py  schemas.py
app/settings/: config.py
app/utils/strm/: __init__.py  parser.py  processor.py
tests/: test_cancel_task.py  test_progress_calculation.py  test_system_settings_api.py  test_task_recovery.py  test_timezone_fix.py
web/: .env  .env.prod  .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
web/src/components/custom/: console-log-viewer.vue  enhanced-log-filter.vue  file-parse-result.vue  file-tree-view.vue  segmented-progress-bar.vue  server-management.vue  task-status-display.vue
web/src/components/strm/: FilePreview.vue  TaskFileList.vue  TaskFileTreeView.vue
web/src/composables/: useLogStream.ts
web/src/hooks/common/: loading.ts
web/src/locales/langs/: en-us.ts  zh-cn.ts
web/src/plugins/: iconify.ts
web/src/router/elegant/: imports.ts  routes.ts  transform.ts
web/src/service/api/: auth.ts  strm.ts
web/src/typings/: api.d.ts  app.d.ts  components.d.ts  elegant-router.d.ts
web/src/utils/: common.ts  renderIcon.ts
web/src/views/_builtin/login/modules/: register.vue  reset-pwd.vue
web/src/views/manage/api/: index.vue
web/src/views/manage/api/modules/: api-operate-drawer.vue  api-search.vue
web/src/views/manage/menu/: index.vue
web/src/views/manage/menu/modules/: menu-operate-modal.vue
web/src/views/manage/role/: index.vue
web/src/views/manage/role/modules/: role-operate-drawer.vue  role-search.vue
web/src/views/manage/settings/: index.vue
web/src/views/manage/user/: index.vue
web/src/views/manage/user/modules/: user-operate-drawer.vue  user-search.vue
web/src/views/strm/generate/: index.vue
web/src/views/strm/history/: index.vue
web/src/views/strm/tasks/: index.vue
web/src/views/strm/upload/: index.vue
